package com.burhan.abstractfactory.plans.insurance;

public interface Insurance {
    double getCoverageAmount();
    String getCoverageType();
    double getDailyPremium();
}
