package com.burhan.abstractfactory.plans.vehicle;

public interface Vehicle {
    void startEngine();
    void stopEngine();
    int getCapacity();
    double getDailyRate();
}
